--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -89,15 +89,15 @@
 	                    <tr><td id="tdGroups" align="right">Groups:</td><td><input type="text" id="txtGroups" placeholder="Groups" class="ui-disabled entrybox"  onkeypress="return isNumberKey(event)" ></td></tr>
 	                    <tr><td id="tdBonus" align="right">Bonus:</td><td><input type="text" id="txtBonus" placeholder="Bonus" class="ui-disabled entrybox" onkeypress="return isNumberKey(event)" ></td></tr>
 	                    <tr><td id="tdNeutralDed" align="right">Neutral Deductions:</td><td><input type="text" id="txtNeutralDed" placeholder="Neutral Ded." class="ui-disabled entrybox" onkeypress="return isNumberKey(event)" ></td></tr>
-	                    <tr><td id="tdDScore" align="right">D-Score:</td><td><div id="lblDScore"></div></td></tr>
-	                    <tr><td colspan="2" align="right"><a href="#" id="btnSetDScore" type="button" class="btn btn-main mb-2 ui-disabled" onclick="SetDScore()" style="font-size:1rem">Set D-Score</a></td></tr>
+	                    <tr><td id="tdDScore" align="right" style="text-decoration:underline">D-Score:</td><td><div id="lblDScore" style="text-decoration:underline"></div></td></tr>
+	                    <tr><td colspan="2" align="right"><a href="#" id="btnSetDScore" type="button" class="btn btn-main mb-2 mt-2 ui-disabled" onclick="SetDScore()" style="font-size:1rem">Set D-Score</a></td></tr>
 	                    <tr><td id="tdE1" align="right">E1 Execution:</td><td id="divET1">0.0</td></tr>
 	                    <tr><td id="tdE2" align="right">E2 Execution:</td><td id="divET2">0.0</td></tr>
 	                    <tr><td id="tdE3" align="right">E3 Execution:</td><td id="divET3">0.0</td></tr>
 	                    <tr><td id="tdE4" align="right">E4 Execution:</td><td id="divET4">0.0</td></tr>
-	                    <tr><td id="tdEScore" align="right">E-Score:</td><td id="divEScore">0.0</td></tr>
+	                    <tr><td id="tdEScore" align="right" style="text-decoration:underline">E-Score:</td><td id="divEScore" style="text-decoration:underline">0.0</td></tr>
 	                    <tr><td align="right" style="height:10px"></td><td></td></tr>
-	                    <tr><td id="tdTotal" align="right">Final Score:</td><td id="divTotalScore">0.0</td></tr>
+	                    <tr><td id="tdTotal" align="right" style="text-decoration:underline">Total Score:</td><td id="divTotalScore" style="text-decoration:underline">0.0</td></tr>
 	                </table>
                 {% else %}
                     <table cellspacing="0" cellpadding="0" border="0" style="font-size:0.75rem">
@@ -106,15 +106,15 @@
 	                    <tr><td id="tdGroups" align="right">Groups:</td><td><div id="lblGroups"></div></td></tr>
 	                    <tr><td id="tdBonus" align="right">Bonus:</td><td><div id="lblBonus"></div></td></tr>
 	                    <tr><td id="tdNeutralDed" align="right">Neutral Deductions:</td><td><div id="lblNeutralDed"></div></td></tr>
-	                    <tr><td id="tdDScore" align="right">D-Score:</td><td><div id="lblDScore"></div></td></tr>
+	                    <tr><td id="tdDScore" align="right" style="text-decoration:underline">D-Score:</td><td><div id="lblDScore" style="text-decoration:underline"></div></td></tr>
 	                    <tr><td colspan="2" align="right"></td></tr>
 	                    <tr><td id="tdE1" align="right">E1 Execution:</td><td id="divET1">0.0</td></tr>
 	                    <tr><td id="tdE2" align="right">E2 Execution:</td><td id="divET2">0.0</td></tr>
 	                    <tr><td id="tdE3" align="right">E3 Execution:</td><td id="divET3">0.0</td></tr>
 	                    <tr><td id="tdE4" align="right">E4 Execution:</td><td id="divET4">0.0</td></tr>
-	                    <tr><td id="tdEScore" align="right">E-Score:</td><td id="divEScore">0.0</td></tr>
+	                    <tr><td id="tdEScore" align="right" style="text-decoration:underline">E-Score:</td><td id="divEScore" style="text-decoration:underline">0.0</td></tr>
 	                    <tr><td align="right" style="height:10px"></td><td></td></tr>
-	                    <tr><td id="tdTotal" align="right">Final Score:</td><td id="divTotalScore">0.0</td></tr>
+	                    <tr><td id="tdTotal" align="right" style="text-decoration:underline">Total Score:</td><td id="divTotalScore" style="text-decoration:underline">0.0</td></tr>
 	                </table>
                 {% endif %}
             <div id="divSpeedSpacer" align="right" style="height:33px;display:none">  
