--- a/STSEval/app/templates/app/scoreboard.html
+++ b/STSEval/app/templates/app/scoreboard.html
@@ -249,7 +249,7 @@
         $("#" + obj).height("1");
         $("#" + obj).show();
         $("#" + obj).offset({ top: ev.pageY, left: ev.pageX });
-        $("#" + obj).animate({ width: '92%', left: '4%', top: '4%', height: theight }, 500, function () {  });
+        $("#" + obj).animate({ width: '92%', left: '4%', top: '4%', height: theight + 20 }, 500, function () {  });
 
     }
 
