--- a/STSEval/app/templates/app/evideo.html
+++ b/STSEval/app/templates/app/evideo.html
@@ -24,24 +24,52 @@
 	                    <tr><td id="tdGroups" align="right">Groups:</td><td><div id="lblGroups"></div></td></tr>
 	                    <tr><td id="tdBonus" align="right">Bonus:</td><td><div id="lblBonus"></div></td></tr>
 	                    <tr><td id="tdNeutralDed" align="right">Neutral Deductions:</td><td><div id="lblNeutralDed"></div></td></tr>
-	                    <tr><td id="tdDScore" align="right">D-Score:</td><td><div id="lblDScore"></div></td></tr>
+	                    <tr><td id="tdDScore" align="right" style="text-decoration:underline">D-Score:</td><td><div id="lblDScore" style="text-decoration:underline"></div></td></tr>
 	                    <tr><td colspan="2" align="right"></td></tr>
 	                    <tr><td id="tdE1" align="right">E1 Execution:</td><td id="divET1">0.0</td></tr>
 	                    <tr><td id="tdE2" align="right">E2 Execution:</td><td id="divET2">0.0</td></tr>
 	                    <tr><td id="tdE3" align="right">E3 Execution:</td><td id="divET3">0.0</td></tr>
 	                    <tr><td id="tdE4" align="right">E4 Execution:</td><td id="divET4">0.0</td></tr>
-	                    <tr><td id="tdEScore" align="right">E-Score:</td><td id="divEScore">0.0</td></tr>
+	                    <tr><td id="tdEScore" align="right" style="text-decoration:underline">E-Score:</td><td id="divEScore" style="text-decoration:underline">0.0</td></tr>
 	                    <tr><td align="right" style="height:10px"></td><td></td></tr>
-	                    <tr><td id="tdTotal" align="right">Final Score:</td><td id="divTotalScore">0.0</td></tr>
+	                    <tr><td id="tdTotal" align="right" style="text-decoration:underline">Final Score:</td><td id="divTotalScore" style="text-decoration:underline">0.0</td></tr>
 	                </table>
                 </div>
             </td>
         </tr>
         <tr>
             <td>
-	            <div id="divDotsArea" class="DotsArea" style="width:854px;height:100px;">
-	                <div id="divRedLine" style="position:absolute;left:20px;top:0px;height:100px;border-left:1px solid red;width:1px;display:none"></div>
+                <div id="divDotsHolder" style="position:relative;max-width:852px;">
+	                <div id="divDotsArea" class="DotsArea" style="width:854px;height:100px;">
+	                    <div id="divRedLine" style="position:absolute;left:20px;top:0px;height:100px;border-left:1px solid red;width:1px;display:none"></div>
+	                </div>
+                    <div id="divEJudges" align="left" style="float:left;padding-left:5px;padding-top:5px;position:absolute;top:0px;left:0px;">
+	  		        <div>
+		                <table cellspacing="0" border=0 cellpadding="0">
+			                <tr>
+                                <td><input type="checkbox" id="chkE1" data-role="none" style="display:none" onclick="EJudgeCheckCalc(1)"></td>
+			                    <!--<td id="divJT1" style="width:30px;font-weight:bold"></td>-->
+			                    <td id="divE1N">&nbsp;E1</td>
+			                </tr>
+			                <tr>
+                                <td><input type="checkbox" id="chkE2" data-role="none" style="display:none" onclick="EJudgeCheckCalc(2)"></td>
+			                        <!--<td id="divJT2" style="width:30px;font-weight:bold"></td>-->
+			                    <td id="divE2N">&nbsp;E2</td>
+			                </tr>
+			                <tr>
+                                <td><input type="checkbox" id="chkE3" data-role="none" style="display:none" onclick="EJudgeCheckCalc(3)"></td>
+			                        <!--<td id="divJT3" style="width:30px;font-weight:bold"></td>-->
+			                    <td id="divE3N">&nbsp;E3</td>
+			                </tr>
+			                <tr>
+                                <td><input type="checkbox" id="chkE4" data-role="none" style="display:none" onclick="EJudgeCheckCalc(4)"></td>
+			                        <!--<td id="divJT4" style="width:30px;font-weight:bold"></td>-->
+			                    <td id="divE4N">&nbsp;E4</td>
+			                </tr>
+		                </table>
+		            </div>
 	            </div>
+                </div>
 	        </td>
 	        <td align="left" style="vertical-align:top;">
 	            <div class="d-flex">
@@ -49,32 +77,7 @@
 	                    <div id="divDotsAreaGlobal" style="position:relative;width:100px;height:100px;border-top:1px solid black;border-right:1px solid black;border-bottom:1px solid black;background-color:#373748">
 	   
 	                    </div>
-	                    <div id="divEJudges" align="left" style="padding-left:5px;padding-top:12px">
-	   
-		                    <div style="float:left">
-		                        <table cellspacing="0" border="0" cellpadding="0">
-			                        <tr>
-			                            <td id="divJT1" style="width:30px;font-weight:bold"></td>
-			                            <td id="divE1N"></td>
-			                        </tr>
-			                        <tr>
-			                            <td id="divJT2" style="width:30px;font-weight:bold"></td>
-			                            <td id="divE2N"></td>
-			                        </tr>
-			                        <tr>
-			                            <td id="divJT3" style="width:30px;font-weight:bold"></td>
-			                            <td id="divE3N"></td>
-			                        </tr>
-			                        <tr>
-			                            <td id="divJT4" style="width:30px;font-weight:bold"></td>
-			                            <td id="divE4N"></td>
-			                        </tr>
-		                        </table>
-		                    </div>
-	                    </div>
-	                    <div style="float:right;padding-left:5px">
-		               
-	                    </div>
+	                   
                     </div>
                     <div style="padding-left:5px">
 	                    <button href="#" id="btnAccountability" type="button" class="btn btn-main mb-2 ui-disabled" onclick="ViewAccountabilityReport()">Accountability Report</button>
@@ -188,7 +191,7 @@
                 //if (TrainName != "")
                 //$("#divE" + i + "N").html(EJudges[i].substring(0, 2) + " " + EJudges[i].substring(2));
                 // else
-                $("#divE" + i + "N").html(EJudges[i]);
+                $("#divE" + i + "N").html("E" + i);
                 $("#divJT" + i).empty();
                 $("#divET" + i).show();
                 $("#tdE" + i).show();
@@ -292,19 +295,6 @@
     player.setVolume(0.5);*/
 }
 
-    function SetTwitchStream(stream) {
-        $("#divTwitchPlayer").empty();
-        var options = {
-            width: VidWidth,
-            height: 480,
-            channel: stream,
-            parent: ["www.stseval.com"]
-        };
-        var player = new Twitch.Player("divTwitchPlayer", options);
-        player.setVolume(0.5);
-        //SetupRoutine(stream);
-
-    }
 
     function SetDScoreType(AthleteIn) {
         if (GymnastLevels[AthleteIn] == "L4" || GymnastLevels[AthleteIn] == "L5" || GymnastLevels[AthleteIn] == "L6" || GymnastLevels[AthleteIn] == "L7") {
@@ -355,10 +345,10 @@
             //console.log("Setting Scoring 4567");
             $("#tdDifficulty").html("Base Score:");
             $("#tdDScore").html("Start Value:");
-            $("#tdE1").html("E1 Deduction:");
-            $("#tdE2").html("E2 Deduction:");
-            $("#tdE3").html("E3 Deduction:");
-            $("#tdE4").html("E4 Deduction:");
+            $("#tdE1").html(EJudges[1] + " Deduction:");
+            $("#tdE2").html(EJudges[2] + " Deduction:");
+            $("#tdE3").html(EJudges[3] + " Deduction:");
+            $("#tdE4").html(EJudges[4] + " Deduction:");
             $("#tdGroups").hide();
             $("#lblGroups").hide();
             $("#tdBonus").html("Bonus: ");
@@ -371,10 +361,10 @@
             else
                 $("#tdBonus").html("Bonus: ");
             $("#tdDifficulty").html("Difficulty:");
-            $("#tdE1").html("E1 Execution:");
-            $("#tdE2").html("E2 Execution:");
-            $("#tdE3").html("E3 Execution:");
-            $("#tdE4").html("E4 Execution:");
+           $("#tdE1").html(EJudges[1] + " Execution:");
+            $("#tdE2").html(EJudges[2] + " Execution:");
+            $("#tdE3").html(EJudges[3] + " Execution:");
+            $("#tdE4").html(EJudges[4] + " Execution:");
             $("#tdDScore").html("D-Score:");
             $("#tdEScore").html("E-Score: ");
             $("#tdGroups").show();
@@ -384,10 +374,10 @@
             //console.log("Setting Scoring FIG");
             $("#tdDifficulty").html("Difficulty:");
             $("#tdDScore").html("D-Score:");
-            $("#tdE1").html("E1 Execution:");
-            $("#tdE2").html("E2 Execution:");
-            $("#tdE3").html("E3 Execution:");
-            $("#tdE4").html("E4 Execution:");
+           $("#tdE1").html(EJudges[1] + " Execution:");
+            $("#tdE2").html(EJudges[2] + " Execution:");
+            $("#tdE3").html(EJudges[3] + " Execution:");
+            $("#tdE4").html(EJudges[4] + " Execution:");
             $("#tdEScore").html("E-Score: ");
             if (ev == "FX" || ev == "HB")
                 $("#tdBonus").html("Connections and Bonus: ");
