--- a/STSEval/app/templates/app/evideo.html
+++ b/STSEval/app/templates/app/evideo.html
@@ -80,7 +80,7 @@
 	                   
                     </div>
                     <div style="padding-left:5px">
-	                    <button href="#" id="btnAccountability" type="button" class="btn btn-main mb-2 ui-disabled" onclick="ViewAccountabilityReport()">Accountability Report</button>
+	                    <button href="#" id="btnAccountability" type="button" class="btn btn-main mb-2 ui-disabled" onclick="ViewAccountabilityReport()">Report</button>
 	                </div>
                 </div>
             </td>
